--- a/sentry.opam
+++ b/sentry.opam
@@ -17,7 +17,7 @@ depends: [
   "re2"
   "sexplib" {>= "v0.10"}
   "uuidm"
-  "uri"
+  "uri" {>= "2.0.0"}
 
   "ppx_jane" {build}
   "bisect_ppx" {build & >= "1.3.1"}
